[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "rule-engine"
dynamic = ["version"]
description = "A lightweight, optionally typed expression language with a custom grammar for matching arbitrary Python objects."
readme = "README.rst"
license = {text = "BSD"}
authors = [
    {name = "Spencer McIntyre", email = "zeroSteiner@gmail.com"},
]
maintainers = [
    {name = "Spencer McIntyre", email = "zeroSteiner@gmail.com"},
]
requires-python = ">=3.9"
dependencies = [
    "python-dateutil~=2.7",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/zeroSteiner/rule-engine"

[dependency-groups]
dev = [
    "coverage",
    "graphviz",
    "invoke",
    "ipython>=9.0; python_version >= '3.11'",
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.setuptools]
package-dir = {"" = "lib"}

[tool.setuptools.packages.find]
where = ["lib"]

[tool.setuptools.package-data]
"rule_engine._vendor.ply" = ["LICENSE"]

[tool.setuptools.dynamic]
version = {attr = "rule_engine.__version__"}
